add configuration: valid locations in config.toml and custom theme in .\.streamlit\config"

--- a/config/config.toml
+++ b/config/config.toml
@@ -27,3 +27,49 @@ meteorogical_columns = [
     'mean_wind_speed_kmh',
     'max_wind_speed_kmh',
 ]
+locations = [
+    "Admiralty",
+    "Ang Mo Kio",
+    "Bukit Panjang",
+    "Bukit Timah",
+    "Buona Vista",
+    "Changi",
+    "Choa Chu Kang Central",
+    "Choa Chu Kang South",
+    "Clementi",
+    "East Coast Parkway",
+    "Jurong Island",
+    "Jurong Pier",
+    "Jurong West",
+    "Kent Ridge",
+    "Kranji Reservoir",
+    "Lim Chu Kang",
+    "Lower Peirce Reservoir",
+    "Macritchie Reservoir",
+    "Mandai",
+    "Marina Barrage",
+    "Marine Parade",
+    "Newton",
+    "Nicoll Highway",
+    "Pasir Panjang",
+    "Pasir Ris Central",
+    "Pasir Ris West",
+    "Paya Lebar",
+    "Pulau Ubin",
+    "Punggol",
+    "Queenstown",
+    "Seletar",
+    "Sembawang",
+    "Sentosa Island",
+    "Simei",
+    "Somerset Road",
+    "Tai Seng",
+    "Tanjong Katong",
+    "Tengah",
+    "Toa Payoh",
+    "Tuas",
+    "Tuas South",
+    "Ulu Pandan",
+    "Upper Peirce Reservoir",
+    "Whampoa"
+]
